--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cloudinary": "^2.8.0",
+    "html-to-image": "^1.11.13",
     "mongoose": "^9.0.2",
     "next": "16.0.10",
     "react": "19.2.1",
